# sql_lineage_tracker

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/scripts/: bq_data.json
backend/src/lineage_tracker/: __init__.py  cli.py  extractor.py  graph.py  models.py  parser.py  persistence.py  scanner.py  server.py
backend/tests/: test_expand_repro.py  test_extractor.py  test_graph.py  test_nested_subquery.py  test_nested_subquery_min.py  test_parser.py  test_persistence.py  test_repro_dist_cuad_min.py  test_scanner.py  test_server.py
backend/tests/tests_rational_world_470315_b4/: bq_schema_rational-world-470315-b4.md  conftest.py  create_bq_test_schema.py  test_manual_edge_cases.py  test_parse_aggregation.py  test_parse_case_when.py  test_parse_cross_chain.py  test_parse_cte.py  test_parse_join.py  test_parse_left_join.py  test_parse_multi_cte.py  test_parse_rename.py  test_parse_script_view.py  test_parse_subquery.py  test_parse_union_all.py  test_parse_window.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ColumnTraceModal.tsx  EdgeDetailPanel.tsx  ExportModal.tsx  FilterPanel.tsx  GraphCanvas.tsx  ManualEdgeModal.tsx  NodeContextMenu.tsx  NodeDetailPanel.tsx  OriginsModal.tsx  ScanProgressBar.tsx  ScanSetupScreen.tsx  SearchBar.tsx  SqlHighlight.tsx  SqlModal.tsx  TableNode.tsx  Toolbar.tsx  TraceBreadcrumb.tsx
specs/: CLAUDE.md  issue_selects_anidados.md  sql_lineage_tracker_v1.md
(+10 files in other folders)
