[project]
name = "sql-lineage-tracker"
version = "0.1.0"
description = "BigQuery column-level SQL lineage tracker with interactive DAG visualization"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.0",
    "sqlglot>=20.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
]

[project.optional-dependencies]
datatransfer = ["google-cloud-bigquery-datatransfer"]

[project.scripts]
sql-lineage-tracker = "lineage_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lineage_tracker"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
